<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hedvig</string>
    <string name="marketing_cta">Skaffa Hedvig</string>
    <string name="marketing_login">Redan medlem? Logga in</string>
    <string name="marketing_say_hello">Säg hej till Hedvig!</string>
    <string name="my_info_row_title">Min info</string>
    <string name="my_info_title">Min info</string>
    <string name="my_home_row_title">Mitt hem</string>
    <string name="profile_my_info_contact_details">Kontaktuppgifter</string>
    <string name="profile_my_info_email_label">Epost</string>
    <string name="profile_my_info_phone_number_label">Telefonnummer</string>
    <string name="payment_row_title">Betalning</string>
    <string name="profile_payment_header">Min betalning</string>
    <string name="profile_payment_payment">Betalning</string>
    <string name="profile_payment_direct_debit">Autogiro</string>
    <string name="profile_payment_bank">Bank</string>
    <string name="profile_payment_change_bank_account">Ändra bankkonto</string>
    <string name="profile_payment_deductible">Självrisk\n1 500 kr</string>
    <string name="profile_title">Profil</string>
    <string name="save">Spara</string>
    <string name="my_info_row_description">Howdy</string>
    <string name="profile_coinsured_row_name">Medförsäkrade</string>
    <string name="profile_charity_row_name">Välgörenhet</string>
    <string name="profile_payment_row_name">Betalning</string>
    <string name="profile_insurance_certificate_row_name">Försäkringsbrev</string>
    <string name="profile_insurance_certificate_description">Tryck för att läsa</string>
    <string name="profile_feedback_description">Hjälp oss göra Hedvig bättre!</string>
    <string name="profile_feedback_row_name">Feedback</string>
    <string name="profile_log_out">Logga ut</string>
    <string name="payment_title">Betalning</string>
    <string name="address_label" tools:ignore="Typos">Adress</string>
    <string name="postal_number_label">Postnummer</string>
    <string name="insurance_type_label">Typ</string>
    <string name="change_insurance_information">Ändra bostadsinfo</string>
    <string name="my_home_title">Mitt hem</string>
    <string name="feedback_header">Hjälp oss bli\nbättre!</string>
    <string name="report_bug_label">Rapportera bugg</string>
    <string name="bug_report_mail">android@hedvig.com</string>
    <string name="rate_us_label">Betygsätt appen</string>
    <string name="rate_us_link">Google Play</string>
    <string name="feedback_title">Feedback</string>
    <string name="policy_title">Försäkringsbrev</string>
    <string name="coinsured_more_to_come">Det kommer mer!</string>
    <string name="coinsured_explainer">Vi jobbar på utökad funktionalitet för medförsäkrade, såsom att alla medförsäkrade ska kunna logga in och att du ska kunna lägga till och ta bort medförsäkrade med ett knapptryck.</string>
    <string name="coinsured_title">Medförsäkrade</string>
    <string name="charity_title">Välgörenhet</string>
    <string name="select_charity_explainer">Du har ännu inte valt vilken välgörenhetsorganisation som din andel av årets överskott ska gå till.</string>
    <string name="invalid_email">Inkorrekt Epostadress</string>
    <string name="invalid_phone_number">Inkorrekt telefonnummer</string>
    <string name="profile_about_app_row_name">Om appen</string>
    <string name="about_app_title">Om appen</string>
    <string name="copyright_label">© Hedvig AB - 2019</string>
    <string name="dialogTitle">Vill du ändra din försäkring?</string>
    <string name="dialogParagraph">Skriv till Hedvig i chatten så får du hjälp direkt!</string>
    <string name="cancel">Avbryt</string>
    <string name="write_to_hedvig">Skriv till Hedvig</string>
    <string name="trustly_success_title">Kontobyte klart!</string>
    <string name="trustly_success_paragraph">Ditt bankkonto är uppdaterat och kommer synas på din profilsida inom kort. Nästa betalning kommer dras från ditt nya bankkonto.</string>
    <string name="trustly_close_label">Avsluta</string>
    <string name="trustly_fail_title">Något gick snett!</string>
    <string name="trustly_fail_paragraph">På grund av ett tekniskt fel kunde inte ditt bankkonto uppdateras. Testa att starta om din app och prova igen eller skriv till Hedvig i chatten.</string>
    <string name="connect_direct_debit">Koppla autogiro</string>
    <string name="connect_direct_debit_paragraph">För att din försäkring ska gälla framöver behöver du koppla autogiro från ditt bankkonto. Vi sköter det via Trustly.</string>
</resources>
