<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hedvig.android.owldroid.ui.profile.ProfileFragment">

    <include layout="@layout/app_bar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/off_white">

            <ProgressBar
                android:id="@id/profile_loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@id/profile_charity_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@id/profile_rows_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_charity_image"
                tools:visibility="visible">

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_my_info_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconImage="@drawable/icon_my_info"
                    app:name="@string/my_info_row_title" />

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_my_home_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconImage="@drawable/icon_my_home"
                    app:name="@string/my_home_row_title" />

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_coinsured_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconImage="@drawable/icon_coinsured"
                    app:name="@string/profile_coinsured_row_name" />

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_charity_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconImage="@drawable/icon_charity"
                    app:name="@string/profile_charity_row_name" />

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_payment_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:iconImage="@drawable/icon_payment"
                    app:name="@string/profile_payment_row_name" />

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_insurance_certificate_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/profile_insurance_certificate_description"
                    app:iconImage="@drawable/icon_insurance_certificate"
                    app:name="@string/profile_insurance_certificate_row_name" />

                <com.hedvig.android.owldroid.ui.profile.ProfileMenuRow
                    android:id="@id/profile_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/profile_feedback_description"
                    app:iconImage="@drawable/icon_feedback"
                    app:name="@string/profile_feedback_row_name" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@id/profile_log_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:text="@string/profile_log_out"
                    android:textAlignment="center"
                    android:textColor="@color/pink" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
