<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@id/profile_payment_loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@id/profile_payment_header"
        style="@style/ProfileSubscreenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/profile_payment_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RelativeLayout
        android:id="@id/profile_payment_amount_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_payment_header">

        <android.support.v7.widget.AppCompatImageView
            android:id="@id/profile_payment_sphere"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/sphere" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_payment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/soray_extrabold"
            android:gravity="center_horizontal"
            android:lines="2"
            android:textColor="@color/off_black_dark"
            android:textSize="48sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@id/profile_payment_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_payment_amount_container">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/circular_bold"
            android:text="@string/profile_payment_payment"
            android:textColor="@color/off_black_dark"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/circular_book"
            android:text="@string/profile_payment_direct_debit"
            android:textColor="@color/off_black"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/circular_book"
            android:text="@string/payment_27th"
            android:textColor="@color/off_black_dark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/profile_payment_bank_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_payment_details_container">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/circular_bold"
            android:text="@string/profile_payment_bank"
            android:textColor="@color/off_black_dark"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@id/profile_payment_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/circular_book"
            android:textColor="@color/off_black"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@id/profile_payment_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/circular_book"
            android:textColor="@color/off_black_dark"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>